--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,9 +16,9 @@ services:
       KAFKA_ADVERTISED_HOST_NAME: localhost
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
       KAFKA_CREATE_TOPICS: "test:1:1:compact"
-      # AWS_ACCESS_KEY_ID: AKIAZGNSJUMNTZUIWDYO
-      # AWS_SECRET_ACCESS_KEY: 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
-      # PATH_OF_FILE: s3://rajesh-test-buck/employee_2_20180123.json
+      # AWS_ACCESS_KEY_ID: 
+      # AWS_SECRET_ACCESS_KEY: 
+      # PATH_OF_FILE: 
   Mysql:
     image: rajeshdocker2020/mysql-with-trans:latest
     container_name: Mysql
